--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+    <string>This app needs camera access to take photos for profile picture.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app needs photos access to get profile picture from photo library.</string>
 </dict>
 </plist>
