--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   video_player: ^2.9.2
   flutter_carousel_widget: ^3.1.0
   carousel_slider: ^5.0.0
+  image_picker: ^1.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
