--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_svg: ^2.0.16
   url_launcher: ^6.0.0
   lottie: ^3.1.3
+  google_maps_flutter: ^2.10.0
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
