--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   lottie: ^3.1.3
 #  google_maps_flutter: ^2.10.0
   intl: ^0.20.1
+  connectivity_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
