--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_carousel_widget: ^3.1.0
   carousel_slider: ^5.0.0
   image_picker: ^1.1.2
+  flutter_typeahead: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
