--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   flutter_carousel_widget: ^3.1.0
   carousel_slider: ^5.0.0
   image_picker: ^1.1.2
-  flutter_typeahead: ^4.8.0
-  flutter_keyboard_visibility: ^5.4.1
+  flutter_typeahead: ^5.2.0
+#  flutter_keyboard_visibility: ^5.4.1
 
 
   # The following adds the Cupertino Icons font to your application.
