--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   skeletonizer: ^1.4.2
   dotted_border: ^2.1.0
   flutter_secure_storage: ^9.2.2
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_test:
