--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.4
+  local_push_notifications: ^0.0.2
 
 dev_dependencies:
   flutter_test:
