--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_html: ^3.0.0-beta.2
   video_player: ^2.9.2
   flutter_carousel_widget: ^3.1.0
   carousel_slider: ^5.0.0
