--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.4
   jwt_decoder: ^2.0.1
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
