Input skeleton in user

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   khmer_fonts: ^0.0.6
   fluttertoast: ^8.2.10
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
