--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,8 +29,10 @@ android {
         applicationId = "com.istad.lms_flutter_project"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 21
+        targetSdk = 34
+//        minSdk = flutter.minSdkVersion
+//        targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
